--- a/aac-ionic/scss/ionic.app.scss
+++ b/aac-ionic/scss/ionic.app.scss
@@ -118,22 +118,22 @@ a#btn-styling.button.button-outline.button-small{
 #blue-list-item{
   background-color: $speak-agent-light-blue3;
   font-weight: bold;
-} 
+}
 
-.boards{
-  padding:.5%;
-  height: 70px;
+.boards {
+  padding: .5%;
+  height: 72px;
   width: 70px;
   font-size: .75em;
   margin: 4.5px;
   float: left;
   text-align: center;
-  background: url('../img/new_dev_assets/board_tile_notched_default_1.svg');
+  background: url("../img/new_dev_assets/board_tile_default.svg");
 }
 
 .boards.activated,
 .activated-board {
-  background: url('../img/new_dev_assets/board_tile_notched_default_yellow.svg')!important;
+  background: url("../img/new_dev_assets/board_tile_current.svg");
 }
 
 .boards a{
@@ -195,7 +195,7 @@ a#btn-styling.button.button-outline.button-small{
 
 #board-section{
   margin-top:-20px;
-  float:left; 
+  float:left;
 }
 
 #bodyBack{
@@ -208,21 +208,21 @@ a#btn-styling.button.button-outline.button-small{
 }
 
 #btn-section{
-  background:$speak-agent-blue; 
+  background:$speak-agent-blue;
   padding:0;
 }
 
 #btn-styling{
   border-color:$speak-agent-blue;
-  color:$speak-agent-blue; 
-  border-radius:0; 
+  color:$speak-agent-blue;
+  border-radius:0;
   margin-left:8px;
 }
 
 #btn-styling-buddy{
   border-color:$speak-agent-blue;
-  color:$speak-agent-blue; 
-  border-radius:0; 
+  color:$speak-agent-blue;
+  border-radius:0;
   margin-left:8px;
   width:20%;
 }
@@ -363,7 +363,7 @@ button#btn-styling.button.button-outline.button-calm.button-small.selected-btn2{
   margin-bottom: 30px;
   float: left;
   text-align: center;
-  
+
   a{
     color: $black;
     text-decoration: none;
@@ -383,8 +383,8 @@ button#btn-styling.button.button-outline.button-calm.button-small.selected-btn2{
 }
 
 #color-modal-style{
-  width:80%; 
-  margin-left:-10%; 
+  width:80%;
+  margin-left:-10%;
   height: 80%;
   margin-top:-5%;
   opacity:.9;
@@ -488,12 +488,12 @@ button#btn-styling.button.button-outline.button-calm.button-small.selected-btn2{
 }
 
 #home-section{
-  float: right; 
+  float: right;
   margin-top:12px;
 }
 
 #home-button-section{
-  background: $white; 
+  background: $white;
   padding-left: 15px;
   margin:0;
 }
@@ -717,7 +717,7 @@ input[type="text"]:focus, textarea:focus{
 }
 
 #regularRow{
-  margin:0; 
+  margin:0;
   padding:0;
 }
 
@@ -783,7 +783,7 @@ input[type="text"]:focus, textarea:focus{
 .settings-box{
   background-color: $white;
   margin: 5% 15%;
-  padding: 10px 30px; 
+  padding: 10px 30px;
   font-size: 1.2em;
   width:70%;
 }
@@ -811,7 +811,7 @@ input[type="text"]:focus, textarea:focus{
 }
 
 .tile, .tile2{
-  padding:.5%; 
+  padding:.5%;
   border-radius: 12px;
   height:74px;
   width:74px;
@@ -839,13 +839,13 @@ input[type="text"]:focus, textarea:focus{
 }
 
 #tile-section{
-  margin-top:-33px; 
-  float: left; 
+  margin-top:-33px;
+  float: left;
 }
 
 .tile-section-border{
-  margin-top:12px; 
-  float: left; 
+  margin-top:12px;
+  float: left;
   border-right: 2px solid $white;
 }
 
@@ -859,8 +859,8 @@ input[type="text"]:focus, textarea:focus{
 }
 
 .tile.activated{
-  background-color: $speak-agent-light-blue!important;
-  border-color: $white!important;
+  // background-color: $speak-agent-light-blue!important;
+  // border-color: $white!important;
 }
 
 .tile.lightYellow {
@@ -876,10 +876,11 @@ input[type="text"]:focus, textarea:focus{
   float: left;
   text-align: center;
   overflow: hidden;
-  background: url("../img/new_dev_assets/board_tile_notched_default_1.svg") no-repeat; }
+}
 
-.boards.activated {
-  background: url("../img/new_dev_assets/board_tile_notched_default_yellow.svg") no-repeat; }
+.boards:active {
+  background: url("../img/new_dev_assets/board_tile_tapped.svg") no-repeat;
+}
 
 .boards img{
     width: 65%;
@@ -900,13 +901,13 @@ input[type="text"]:focus, textarea:focus{
     left: 4px;
     width: 20px;
     height: 15px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25); 
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
   }
 }
 
 .toggle.toggle-dark-green input:checked + .track {
   border-color: #006D6F;
-  background-color: #006D6F; 
+  background-color: #006D6F;
   /*width:10px;*/
   height:15px;
   float:left;
@@ -920,10 +921,10 @@ input[type="text"]:focus, textarea:focus{
 }
 
 .toggle.toggle-dark-green.toggle-small{
-  position:relative; 
-  z-index:3; 
-  margin-top:1px; 
-  margin-left:2px; 
+  position:relative;
+  z-index:3;
+  margin-top:1px;
+  margin-left:2px;
   margin-bottom:-20px;
 }
 
@@ -935,7 +936,7 @@ input[type="text"]:focus, textarea:focus{
 }
 
 .top-button{
-  position:absolute; 
+  position:absolute;
   margin:42% 30% 30% 39%;
 }
 
@@ -975,7 +976,7 @@ input[type="text"]:focus, textarea:focus{
 }
 
 .word-builder-input{
-  width:800px;
+  width:730px;
   height:80px;
   border-radius: 10px;
   background-color: $white;
