--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -85,8 +85,7 @@ a#btn-styling.button.button-outline.button-small {
   margin: 4.5px;
   float: left;
   text-align: center;
-  background: url("../img/new_dev_assets/board_tile_default.svg");
-}
+  background: url("../img/new_dev_assets/board_tile_default.svg"); }
 
 .boards.activated,
 .activated-board {
@@ -669,10 +668,6 @@ input[type="text"]:focus, textarea:focus {
   background-color: #83EFF0 !important;
   border-color: #ffffff !important; }
 
-.tile.activated {
-  /*background-color: #83EFF0 !important;*/
-  border: 4px solid #ffffff !important; }
-
 .tile.lightYellow {
   background-color: #FFEFAD;
   border-color: #979797; }
@@ -685,11 +680,10 @@ input[type="text"]:focus, textarea:focus {
   margin: 4.5px;
   float: left;
   text-align: center;
-  overflow: hidden;
-}
+  overflow: hidden; }
 
 .boards:active {
-  background: url("../img/new_dev_assets/board_tile_tapped.svg") no-repeat !important;}
+  background: url("../img/new_dev_assets/board_tile_tapped.svg") no-repeat; }
 
 .boards img {
   width: 65%;
